--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -21,6 +21,11 @@
         <mat-icon>add</mat-icon>
         <span>Add Track</span>
       </button>
+
+      <button mat-button routerLink="/playlist/favorites">
+        <mat-icon>favorite</mat-icon>
+        Favorites
+      </button>
     </div>
   </div>
 </mat-toolbar>
