--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
   <main>
     <router-outlet></router-outlet>
   </main>
-  <!-- <app-audio-player></app-audio-player> -->
+  <app-audio-player></app-audio-player>
   <app-footer></app-footer>
 </div>
