--- a/src/app/components/track-detail/track-detail.component.html
+++ b/src/app/components/track-detail/track-detail.component.html
@@ -17,7 +17,7 @@
             <mat-icon>play_arrow</mat-icon>
             Play Track
           </button>
-          <button mat-icon-button (click)="editTrack(track)" matTooltip="Edit">
+          <button mat-icon-button class="edit-button" (click)="editTrack(track)" matTooltip="Edit">
             <mat-icon>edit</mat-icon>
           </button>
           <button mat-icon-button color="warn" (click)="confirmDelete(track)" matTooltip="Delete">
